--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,27 @@ h1 {
   color: orange; }
 
 body {
-  font-family: "Univers LT W01_45 Light1475944"; }
+  font-family: "Univers LT W01_45 Light1475944";
+  background-color: #dadde3;
+  margin: 0; }
+
+#homepage-blurb {
+  color: #1780b7; }
+
+.logo-line-1 {
+  font-weight: 800;
+  color: #a8a8a8; }
+
+.logo-line-2 {
+  font-weight: 500;
+  color: #585858; }
+
+#homepage-header {
+  background-image: url("main-photo.jpg");
+  background-size: 100% 100%;
+  border: 1px solid red; }
+
+html, body, #homepage-header {
+  height: 100%; }
 
 /*# sourceMappingURL=style.css.map */
