--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,13 +1,14 @@
 $light-grey-color: #a8a8a8;
 $grey-color: #585858;
 $navbar-blue: #6896ac;
+$left-margin: 60px;
+$background-grey: #dadde3;
+$grid-padding-left: 20px;
+$page-top-margin: 30px;
 
-h1 {
-	color: orange;
-}
 body {
-	font-family: "Univers LT W01_45 Light1475944";
-	background-color: #dadde3;
+	font-family: "Univers LT W01_45 Light1475944", sans-serif;
+	background-color: $background-grey;
 	margin: 0;
 }
 #homepage-blurb {
@@ -19,6 +20,7 @@ body {
 #best-logo {
 	float: left;
 	font-size: 24px;
+	margin-top: $page-top-margin;;
 	.logo-line-1 {
 		font-weight: 800;
 		color: $light-grey-color;
@@ -31,8 +33,7 @@ body {
 #homepage-header {
 	background-image: url("main-photo.jpg");
 	background-size: 100% 100%;
-	border: 1px solid red;
-	padding: 30px 130px 30px 60px;
+	padding: 0 130px 0 $left-margin;
 }
 //Stretch main image to fit screen resize
 html, body, #homepage-header {
@@ -62,6 +63,7 @@ html, body, #homepage-header {
 
 #homepage-navbar {
 	ul {
+		margin-top: $page-top-margin;
 		list-style-type: none;
 		margin: 0;
 		padding: 0;
@@ -80,6 +82,28 @@ html, body, #homepage-header {
 		}
 }
 
+/* =========== End of Top Navbar ======= */
 
+/* =========== Services Grid =========== */
 
-/* =========== ENd of Top Navbar ======= */
+#services-grid {
+	margin: 0 140px 80px $left-margin;
+	header {
+		font-size: 26px;
+		width: 66%;
+		background-color: $background-grey;
+		position: absolute;
+		margin-top: -64px;
+		.header-text {
+			float: left;
+			padding-left: $grid-padding-left;
+			padding-top: 10px;
+			padding-bottom: 5px;
+		}
+		.header-chevron {
+			float: right;
+		}
+	}
+}
+
+/* =========== End of Services Grid =========== */
