--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
   background-color: #dadde3;
   margin: 0; }
 
+/* ========== Honepage header section ======= */
 #homepage-blurb {
   color: #1780b7;
   font-size: 32px;
@@ -42,7 +43,7 @@ html, body, #homepage-header {
   border: 1px solid #a8a8a8;
   background: none;
   color: #a8a8a8;
-  padding: 0 15px 0 0;
+  padding: 0 15px 0 5px;
   text-align: center;
   line-height: 48px;
   font-size: 15px;
@@ -50,13 +51,13 @@ html, body, #homepage-header {
 
 .read-more-btn:before {
   content: "+";
-  display: inline;
-  width: 20px;
-  height: 20px;
-  font-size: 32px;
-  line-height: 40px;
-  border: 1px solid #a8a8a8; }
+  display: inherit;
+  font-size: 28px;
+  border-right: 1px solid #a8a8a8;
+  padding-right: 5px;
+  margin-right: 5px; }
 
+/* ======== End of homepage header section == */
 /* =========== Top Navbar ============== */
 #homepage-navbar ul {
   list-style-type: none;
@@ -120,13 +121,6 @@ html, body, #homepage-header {
     float: left;
     height: 250px;
     background-color: #fff; }
-  @media only screen and (max-width: 500px) {
-    #services-grid .col-1 {
-      width: 50%; }
-    #services-grid .col-2 {
-      width: 100%; }
-    #services-grid [class*="col-"] {
-      height: 175px; } }
   #services-grid .text-grid {
     padding-left: 20px;
     padding-top: 30px; }
@@ -137,6 +131,21 @@ html, body, #homepage-header {
     content: "";
     clear: both;
     display: block; }
+  #services-grid .mobile-grid-border {
+    border-right: none; }
+  #services-grid .desktop-grid-border {
+    border-right: 1px solid #585858; }
+  @media only screen and (max-width: 500px) {
+    #services-grid .col-1 {
+      width: 50%; }
+    #services-grid .col-2 {
+      width: 100%; }
+    #services-grid [class*="col-"] {
+      height: 175px; }
+    #services-grid .desktop-grid-border {
+      border-right: none; }
+    #services-grid .mobile-grid-border {
+      border-right: 1px solid #585858; } }
 
 /* =========== End of Services Grid =========== */
 
